--- a/apps/opik-documentation/documentation/fern/docs/tracing/integrations/harbor.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/tracing/integrations/harbor.mdx
@@ -93,39 +93,77 @@ opik harbor --help
 opik harbor run --help
 ```
 
-## Using the Python API
+## Example: SWE-bench Evaluation
 
-For programmatic control, use the `track_harbor` function to add Opik tracking to a Harbor Job instance.
+Here's a complete example running a SWE-bench evaluation with Opik tracking:
 
-### Basic Usage
+```bash
+# Configure Opik
+opik configure
+
+# Set project name
+export OPIK_PROJECT_NAME=swebench-claude-sonnet
+
+# Run SWE-bench evaluation with tracking
+opik harbor run \
+    -d swebench-lite@head \
+    -a claude-code \
+    -m claude-3-5-sonnet-20241022
+```
+
+## Custom Agents
+
+Harbor supports integrating your own custom agents without modifying the Harbor source code. There are two types of agents you can create:
+
+- **External agents** - Interface with the environment through the `BaseEnvironment` interface, typically by executing bash commands
+- **Installed agents** - Installed directly into the container environment and executed in headless mode
+
+For details on implementing custom agents, see the [Harbor Agents documentation](https://harborframework.com/docs/agents).
+
+### Running Custom Agents with Opik
+
+To run a custom agent with Opik tracking, use the `--agent-import-path` flag:
+
+```bash
+opik harbor run -d "terminal-bench@head" --agent-import-path path.to.agent:MyCustomAgent
+```
+
+### Tracking Custom Agent Functions
+
+When building custom agents, you can use Opik's `@track` decorator on methods within your agent implementation. These decorated functions will automatically be captured as spans within the trial trace, giving you detailed visibility into your agent's internal logic:
 
 ```python
-import asyncio
-import os
-from harbor.job import Job
-from harbor.models.job.config import JobConfig
-from opik.integrations.harbor import track_harbor
+from harbor.agents.base import BaseAgent
+from opik import track
 
-# Set Opik project name
-os.environ["OPIK_PROJECT_NAME"] = "harbor-benchmark-demo"
+class MyCustomAgent(BaseAgent):
+    @staticmethod
+    def name() -> str:
+        return "my-custom-agent"
 
-async def main():
-    # Load your Harbor job configuration
-    config = JobConfig.model_validate_yaml(open("job.yaml").read())
+    @track
+    async def plan_next_action(self, observation: str) -> str:
+        # This function will appear as a span in Opik
+        # Add your planning logic here
+        return action
 
-    # Create the Harbor job
-    job = Job(config)
+    @track
+    async def execute_tool(self, tool_name: str, args: dict) -> str:
+        # This will also be tracked as a nested span
+        result = await self._run_tool(tool_name, args)
+        return result
 
-    # Wrap with Opik tracking
-    tracked_job = track_harbor(job)
-
-    # Run the benchmark - traces stream to Opik as trials complete
-    result = await tracked_job.run()
-    
-    print(f"Completed {len(result.stats.evals)} evaluation groups")
-
-asyncio.run(main())
+    async def run(self, instruction: str, environment, context) -> None:
+        # Your main agent loop
+        while not done:
+            observation = await environment.exec("pwd")
+            action = await self.plan_next_action(observation)
+            result = await self.execute_tool(action.tool, action.args)
 ```
+
+This allows you to trace not just the ATIF trajectory steps, but also the internal decision-making processes of your custom agent.
+
+## What Gets Logged
 
 Each trial completion creates an Opik trace with:
 
@@ -135,7 +173,7 @@ Each trial completion creates an Opik trace with:
 - Agent and model metadata
 - Exception information if the trial failed
 
-### Trajectory and Step Spans
+### Trajectory Spans
 
 The integration automatically creates spans for each step in the agent's trajectory, giving you detailed visibility into the agent-environment interaction. Each trajectory step becomes a span showing:
 
@@ -146,42 +184,7 @@ The integration automatically creates spans for each step in the agent's traject
 - Token usage and cost per step
 - Model name for agent steps
 
-### Experiment Tracking
-
-The integration automatically creates experiments to group trial results together for evaluation analysis. For each job, Opik creates:
-
-- A dataset for each Harbor dataset source (e.g., "terminal-bench", "swebench")
-- An experiment named `harbor-job-{job_id[:8]}` to group all trial results
-- Links between traces and dataset items with feedback scores from verifier rewards
-
-## Data Mapping
-
-### Trial Result → Trace
-
-| Harbor Field | Opik Trace Field |
-|-------------|------------------|
-| `trial_name` | `name` (with agent prefix) |
-| `task_name` | `input.task_name` |
-| `started_at` / `finished_at` | `start_time` / `end_time` |
-| `verifier_result.rewards` | `feedback_scores` |
-| `agent_info` | `metadata.agent` |
-| `exception_info` | `error_info` |
-| Dataset source | `tags` |
-
-### Trajectory Step → Span
-
-| ATIF Step Field | Opik Span Field |
-|----------------|-----------------|
-| `step_id` | `name` (e.g., "step_1") |
-| `source` | `type` ("llm" for agent, "general" otherwise) |
-| `message` | `input.message` |
-| `tool_calls` | `input.tool_calls` |
-| `observation` | `output` |
-| `metrics` | `usage`, `total_cost` |
-| `model_name` | `model` |
-| `reasoning_content` | `metadata.reasoning` |
-
-### Verifier Rewards → Feedback Scores
+### Verifier Rewards as Feedback Scores
 
 Harbor's verifier produces rewards like `{"pass": 1, "tests_passed": 5}`. These are automatically converted to Opik feedback scores, allowing you to:
 
@@ -192,98 +195,6 @@ Harbor's verifier produces rewards like `{"pass": 1, "tests_passed": 5}`. These 
 ## Cost Tracking
 
 The Harbor integration automatically extracts token usage and cost from ATIF trajectory metrics. If your agent records `prompt_tokens`, `completion_tokens`, and `cost_usd` in step metrics, these are captured in Opik spans.
-
-## Function Reference
-
-### track_harbor
-
-```python
-def track_harbor(
-    job: Optional[Job] = None,
-    project_name: Optional[str] = None,
-) -> Optional[Job]:
-```
-
-**Parameters:**
-
-| Parameter | Type | Default | Description |
-|-----------|------|---------|-------------|
-| `job` | `Job` | `None` | Optional Harbor Job instance. If provided, returns the same job. |
-| `project_name` | `str` | `None` | Opik project name. Uses `OPIK_PROJECT_NAME` env var if not set |
-
-**Returns:** The job instance if provided, `None` otherwise.
-
-**Usage modes:**
-- `track_harbor(job)` - Wraps a job and enables tracking (for SDK usage)
-- `track_harbor()` - Enables global tracking without a job (for CLI usage)
-
-## Example: SWE-bench Evaluation
-
-Here's a complete example running a SWE-bench evaluation with Opik tracking:
-
-<Tabs>
-    <Tab value="CLI" title="CLI">
-        ```bash
-        # Configure Opik
-        opik configure
-
-        # Set project name
-        export OPIK_PROJECT_NAME=swebench-claude-sonnet
-
-        # Run SWE-bench evaluation with tracking
-        opik harbor run \
-            -d swebench-lite@head \
-            -a claude-code \
-            -m claude-3-5-sonnet-20241022
-        ```
-    </Tab>
-    <Tab value="Python" title="Python">
-        ```python
-        import asyncio
-        import os
-        from harbor.job import Job
-        from harbor.models.job.config import JobConfig, RegistryDatasetConfig
-        from harbor.models.trial.config import AgentConfig
-        from harbor.models.registry import RemoteRegistryInfo
-        from opik.integrations.harbor import track_harbor
-
-        os.environ["OPIK_PROJECT_NAME"] = "swebench-claude-sonnet"
-
-        async def main():
-            # Define job configuration
-            config = JobConfig(
-                job_name="claude-sonnet-swebench-lite",
-                agents=[
-                    AgentConfig(
-                        name="claude-code",
-                        model_name="claude-3-5-sonnet-20241022",
-                    )
-                ],
-                datasets=[
-                    RegistryDatasetConfig(
-                        registry=RemoteRegistryInfo(),
-                        name="swebench-lite",
-                        version="head",
-                    )
-                ],
-            )
-            
-            job = Job(config)
-            
-            # Enable Opik tracking
-            tracked_job = track_harbor(job)
-            
-            # Run the evaluation
-            result = await tracked_job.run()
-            
-            print(f"Completed evaluation")
-            print(f"View results in Opik: https://www.comet.com/opik")
-
-        if __name__ == "__main__":
-            asyncio.run(main())
-        ```
-    </Tab>
-</Tabs>
 
 ## Environment Variables
 
